# course

./: db.sqlite3  pyproject.toml
course_project/: settings.py
