[tool.poetry]
name = "course-project"
version = "0.1.0"
description = ""
authors = ["HybridTheory29 <kirdyashkin.kiroman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
